Project

General

Profile

Actions

Bug #37567

closed

mds: fix incorrect l_pq_executing_ops statistics when meet an invalid item in purge queue

Added by tang junhui over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

l_pq_executing_ops should subtract the ops we added previous
in the condition we meet an invalid item in the purge queue,
otherwise the statistics would always show some ops
in l_pq_executing_ops.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #37626: mimic: mds: fix incorrect l_pq_executing_ops statistics when meet an invalid item in purge queueResolvedNathan CutlerActions
Copied to CephFS - Backport #37627: luminous: mds: fix incorrect l_pq_executing_ops statistics when meet an invalid item in purge queueResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Project changed from Ceph to CephFS
  • Status changed from New to Fix Under Review
  • Assignee set to tang junhui
  • Target version set to v14.0.0
  • Start date deleted (12/07/2018)
  • Source set to Community (dev)
  • Backport set to mimic,luminous
  • Pull request ID set to 25229
  • Component(FS) MDS added
Actions #2

Updated by Patrick Donnelly over 5 years ago

  • Description updated (diff)
Actions #3

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37626: mimic: mds: fix incorrect l_pq_executing_ops statistics when meet an invalid item in purge queue added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37627: luminous: mds: fix incorrect l_pq_executing_ops statistics when meet an invalid item in purge queue added
Actions #6

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF