mds: fix incorrect l_pq_executing_ops statistics when meet an invalid item in purge queue

l_pq_executing_ops should subtract the ops we added previous
in the condition we meet an invalid item in the purge queue,
otherwise the statistics would always show some ops
in l_pq_executing_ops.

Signed-off-by: Junhui Tang <tangjunhui@sangfor.com.cn>
Fixes: http://tracker.ceph.com/issues/37567
(cherry picked from commit ca61ce4485a56dead04a31e47bd1093217d1f222)